--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ authors:
     name: MetaExplore
     display_name: MetaExplore
     gravatar: 2c8b65b07e824ea91b649a8c57af8a28
-    email: 'meta-explore@outlook.com'
-    web: https://meta-explore.github.io
+    email: 'lyove@outlook.com'
+    web: https://lyove.github.io
     twitter: ''
     description: "Author of MetaExplore, a Bootstrap Medium styled template available for WordPress, HTML, Ghost and Jekyll. You are currently previewing Jekyll template demo."
 
